--- a/styles/leaderboard.css
+++ b/styles/leaderboard.css
@@ -25,8 +25,8 @@
 
 .absence-controls {
     position: absolute;
-    top: 0.8rem;
-    right: -1rem;
+    top: 1rem;
+    right: -0.75rem;
     display: flex;
     gap: 0.5rem;
     z-index: 20; /* Ensure buttons are on top of avatar */
