--- a/styles/misc_end.css
+++ b/styles/misc_end.css
@@ -53,7 +53,7 @@
 
 .hero-crown-badge {
     position: absolute;
-    top: 0.2rem;
+    top: -0.9rem;
     left: 50%;
     transform: translateX(-50%);
     font-size: 3rem;
@@ -87,7 +87,7 @@
 
 .hero-crown-badge {
     position: absolute;
-    top: 0.35rem; 
+    top: -0.75rem; 
     left: 50%;
     transform: translateX(-50%);
     font-size: 1.8rem; /* Shrunk from 3.5rem */
